--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -620,8 +620,8 @@
             let toX, toY;
             const toStr = move.to.toString();
             if (toStr === 'off') {
-                toX = fromX + 100;
-                toY = (playerType === 'second')
+                toX = 783; 
+                toY = playerType === 'second'
                     ? (invertColors ? 440 : 340)
                     : (invertColors ? 340 : 440);
             } else {
