--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -638,7 +638,7 @@
             }
 
             let progress = 0;
-            const duration = 267 / animationSpeed; // Duration for smooth animation
+            const duration = 200 / animationSpeed; // Duration for smooth animation
             const startTime = Date.now();
 
             const nextPlayerType = data[current + 1] ? data[current + 1].turn : null;
@@ -693,7 +693,7 @@
             const toY = barY + barCount * barDy; // Position for the hit checker on bar
 
             let progress = 0;
-            const duration = 67 * animationSpeed;
+            const duration = 200 / animationSpeed;
             const startTime = Date.now();
 
             const nextPlayerType = data[current + 1] ? data[current + 1].turn : null;
