--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -153,6 +153,65 @@
             text-align: center;
         }
 
+        .pips-below-board {
+            position: absolute;
+            right: 0;
+            top: 0;
+            margin: 0;
+        }
+
+        .pips-above-board {
+            background-color: #000000;
+            color: #ffffff;
+            padding: 3px 6px;
+            border-radius: 4px;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: right;
+            display: block;
+            width: fit-content;
+        }
+
+        .pips-above-board-inverted {
+            background-color: #ffffff;
+            color: #000000;
+            padding: 3px 6px;
+            border-radius: 4px;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: right;
+            display: block;
+            width: fit-content;
+        }
+
+        .pips-below-board-inverted {
+            background-color: #000000;
+            color: #ffffff;
+            padding: 3px 6px;
+            border-radius: 4px;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: right;
+            display: block;
+            width: fit-content;
+            position: absolute;
+            right: 0;
+            top: 0;
+            margin: 0;
+        }
+
+        .pips-below-board {
+            background-color: #ffffff;
+            color: #000000;
+            padding: 3px 6px;
+            border-radius: 4px;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: right;
+            display: block;
+            width: fit-content;
+        }
+
         @media (max-width: 768px) {
             body {
                 padding: 10px;
@@ -217,12 +276,14 @@
             <select id="gameSelect">
                 <option value="0">Game 1</option>
             </select>
+            <div id="black-pips" class="pips-above-board">0</div>
         </div>
 
         <canvas id="boardCanvas" width="800" height="800"></canvas>
 
         <div class="board-footer">
             <div class="move-info" id="moveInfo">Initial Position</div>
+            <div id="red-pips" class="pips-below-board">0</div>
             <div id="controls">
                 <button id="screenSaveBtn" title="Save Screenshot">
                     <img src="/static/ScreenSave.png" alt="Save Screenshot" style="width: 100%; height: 100%;">
@@ -532,6 +593,43 @@
             const currentPlayerName = currentPlayerType ? (currentPlayerType === 'first' ? game.first_player : game.second_player) : null;
             drawCheckers('first', whiteChecker, positions.first, currentPlayerType);
             drawCheckers('second', blackChecker, positions.second, currentPlayerType);
+
+            const redPips = calculatePips(positions.first, 'red', invertColors);
+            const blackPips = calculatePips(positions.second, 'black', invertColors);
+
+            if (invertColors) {
+                document.getElementById('black-pips').innerText = `${redPips}`;
+                document.getElementById('red-pips').innerText = `${blackPips}`;
+                document.getElementById('black-pips').className = 'pips-above-board-inverted';
+                document.getElementById('red-pips').className = 'pips-below-board-inverted';
+                ctx.fillStyle = '#000000';
+                ctx.fillRect(650, 800, 150, 50);
+                ctx.fillStyle = '#ffffff';
+                ctx.font = 'bold 20px Arial';
+                ctx.textAlign = 'center';
+                ctx.fillText(`${redPips}`, 725, -20);
+
+                ctx.fillStyle = '#ffffff';
+                ctx.fillRect(650, -50, 150, 50);
+                ctx.fillStyle = '#000000';
+                ctx.fillText(`${blackPips}`, 725, 830);
+            } else {
+                document.getElementById('black-pips').innerText = `${blackPips}`;
+                document.getElementById('red-pips').innerText = `${redPips}`;
+                document.getElementById('black-pips').className = 'pips-above-board';
+                document.getElementById('red-pips').className = 'pips-below-board';
+                ctx.fillStyle = '#000000';
+                ctx.fillRect(650, -50, 150, 50);
+                ctx.fillStyle = '#ffffff';
+                ctx.font = 'bold 20px Arial';
+                ctx.textAlign = 'center';
+                ctx.fillText(`${blackPips}`, 725, -20);
+
+                ctx.fillStyle = '#ffffff';
+                ctx.fillRect(650, 800, 150, 50);
+                ctx.fillStyle = '#000000';
+                ctx.fillText(`${redPips}`, 725, 830);
+            }
 
             const item = data[current];
             if (item && item.dice && item.dice.length >= 2 && !['double', 'take', 'win'].includes(item.action)) {
