--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -281,7 +281,7 @@
             <select id="gameSelect">
                 <option value="0">Game 1</option>
             </select>
-            <input type="checkbox" id="skipAnimationCheckbox"> Skip Animation
+            <input type="checkbox" id="skipAnimationCheckbox">
             <div id="black-pips" class="pips-above-board">0</div>
         </div>
 
