--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -92,8 +92,7 @@
         }
 
         #skipAnimationCheckbox {
-            margin-left: 10px;
-            margin-right: 10px;
+            margin-left: 5px;
         }
 
         #prevBtn,
@@ -281,8 +280,8 @@
             <select id="gameSelect">
                 <option value="0">Game 1</option>
             </select>
+            <input type="checkbox" id="skipAnimationCheckbox">
             <div id="black-pips" class="pips-above-board">0</div>
-            <input type="checkbox" id="skipAnimationCheckbox"> Skip Animation
         </div>
 
         <canvas id="boardCanvas" width="800" height="800"></canvas>
