--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -283,6 +283,7 @@
     <div class="container">
 
         <div id="top-row">
+            <div></div>
             <select id="gameSelect">
                 <option value="0">Game 1</option>
             </select>
