--- a/bot/templates/board_viewer.html
+++ b/bot/templates/board_viewer.html
@@ -54,6 +54,11 @@
         .right-group {
             position: absolute;
             right: 0;
+            top: 0;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            gap: 10px;
         }
 
         #controls {
